# ComputerVision_DuAnCuoiKi

./: main.py  pyproject.toml  test_gpu.py
static/: script.js  style.css
templates/: index.html
